# stereo-vio

./: README.md
camera_model/: instruction
ground_truth_publisher/: CMakeLists.txt  package.xml
ground_truth_publisher/launch/: ground_truth_publisher.launch
ground_truth_publisher/src/: ground_truth_publisher_node.cpp
msckf_vio/: CMakeLists.txt
msckf_vio/config/: camchain-imucam-mynteye.yaml
msckf_vio/include/msckf_vio/: feature.hpp  image_processor.h  msckf_vio.h
msckf_vio/launch/: image_processor_euroc.launch  image_processor_mynteye.launch  msckf_vio_euroc.launch  msckf_vio_mynteye.launch  msckf_vio_mynteye_live.launch
msckf_vio/msg/: ImuState.msg
msckf_vio/rviz/: rviz_euroc_config.rviz  rviz_mynteye_config.rviz
msckf_vio/src/: image_processor.cpp  msckf_vio.cpp
mynt_eye_ros_wrapper/launch/: mynteye.launch
